🚀 Deploy: Configuração i18n para GitHub Pages
Configurações de produção:
- ✅ GitHub Actions workflow atualizado
  • Instalação automática de dependências
  • Geração de traduções no build

- ✅ Client-side i18n detection (assets/js/i18n-detect.js)
  • Detecta idioma por: Cookie > Região > Navegador > Default
  • Redireciona automaticamente PT/EN
  • Seletor visual de idioma
  • API de geolocalização integrada

- ✅ index.html atualizado
  • Script de detecção i18n incluído

- ✅ Redirects configurados (_redirects)
  • Rotas multi-idioma
  • Fallback 404

- ✅ DEPLOY.md com documentação completa
  • URLs de produção
  • Processo de deploy
  • Troubleshooting
  • Checklist

Estatísticas:
📦 12,543 arquivos traduzidos
🌍 2 idiomas (PT, EN)
⚡ Auto-detecção client-side
🎯 BR/PT → Português | Mundo → Inglês

Pronto para produção no GitHub Pages!

--- a/index.html
+++ b/index.html
@@ -530,6 +530,8 @@ Origem: {{ software_a }} -> Destino: {{ software_b }}
         </div>
     </div>
 
+    <!-- Scripts -->
+    <script src="assets/js/i18n-detect.js"></script>
     <script src="assets/js/app.js" defer></script>
 </body>
 </html>
