🔧 Fix crítico: Remover 'defer' do app.js para garantir ordem de carregamento

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ Origem: {{ software_a }} -> Destino: {{ software_b }}
 
     <!-- Scripts -->
     <script src="assets/js/i18n-detect.js"></script>
-    <script src="assets/js/app.js" defer></script>
+    <script src="assets/js/app.js"></script>
     
     <!-- Debug: Diagnosticar problemas de i18n -->
     <script>
