--- a/translated/en/index.html
+++ b/translated/en/index.html
@@ -557,7 +557,7 @@ Origem: {{ software_a }} ->Destino: {{ software_b }}
     </div>
 
     <script src="assets/js/i18n-detect.js"></script>
-    <script src="assets/js/app.js" defer></script>
+    <script src="assets/js/app.js"></script>
     
     <!-- Debug: Diagnosticar problemas de i18n -->
     <script>
