🔧 Atualizar template_page.html com Automations Cookbook
✅ Corrige problema onde build.py sobrescrevia as mudanças
✅ Agora o gerador usa a marca correta desde a origem

--- a/template_page.html
+++ b/template_page.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- SEO -->
-    <title>{{ titulo_pagina }} | AI Factory</title>
+    <title>{{ titulo_pagina }} | Automations Cookbook</title>
     <meta name="description" content="{{ descricao_curta }} Tutorial passo a passo e template JSON grátis.">
     <meta name="keywords" content="n8n, {{ software_a }}, {{ software_b }}, automação, integração, workflow">
-    <meta name="author" content="AI Factory">
+    <meta name="author" content="Automations Cookbook">
     <meta name="theme-color" content="#4f46e5">
     <link rel="canonical" href="https://felipejac.github.io/n8n-factory/integracoes/{{ slug_url }}.html">
 
@@ -18,7 +18,7 @@
     <meta property="og:description" content="{{ descricao_curta }}">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://felipejac.github.io/n8n-factory/integracoes/{{ slug_url }}.html">
-    <meta property="og:site_name" content="AI Factory">
+    <meta property="og:site_name" content="Automations Cookbook">
     
     <!-- Preconnect para performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,7 +78,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
                     </svg>
                 </div>
-                <span class="font-bold text-slate-900 tracking-tight">AI Factory</span>
+                <span class="font-bold text-slate-900 tracking-tight">Automations Cookbook</span>
             </a>
             <nav class="hidden md:flex gap-6 text-sm font-medium">
                 <a href="../index.html" class="text-slate-600 hover:text-indigo-600">Voltar para App</a>
@@ -224,7 +224,7 @@
     <!-- Footer -->
     <footer class="bg-white border-t border-slate-200 mt-auto py-8">
         <div class="max-w-7xl mx-auto px-4 text-center">
-            <p class="text-sm text-slate-500">© 2024 AI Factory. Este site não é afiliado oficial da n8n.io.</p>
+            <p class="text-sm text-slate-500">© 2024 Automations Cookbook. Este site não é afiliado oficial da n8n.io.</p>
             <div class="mt-4 flex justify-center gap-4 text-sm text-slate-400">
                 <a href="../index.html" class="hover:text-indigo-600">Home</a>
                 <a href="index.html" class="hover:text-indigo-600">Templates</a>
