📝 Atualizar texto da seção de contato
Alterar de:
- 'Receba templates gratuitos de automação N8N'
- 'Inscreva-se e receba workflows prontos para seu negócio!'

Para:
- 'Precisa de ajuda com automação?'
- 'Entre em contato conosco'

--- a/index.html
+++ b/index.html
@@ -536,8 +536,8 @@ Origem: {{ software_a }} -&gt; Destino: {{ software_b }}
     <section id="contato" class="py-16 bg-gradient-to-br from-slate-50 to-slate-100">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div id="lead-capture" class="lead-form-container">
-                <h3>Receba templates gratuitos de automação N8N</h3>
-                <p>Inscreva-se e receba workflows prontos para seu negócio!</p>
+                <h3>Precisa de ajuda com automação?</h3>
+                <p>Entre em contato conosco</p>
                 
                 <form id="leadForm" class="lead-form">
                     <div class="form-group">
