--- a/index.html
+++ b/index.html
@@ -721,6 +721,7 @@ Origem: {{ software_a }} -&gt; Destino: {{ software_b }}
     .optin-text {
         flex: 1;
         color: rgba(255,255,255,0.9);
+        font-size: 0.8rem;
     }
 
     .optin-text a {
