✏️ Atualizar texto do botão do formulário
De: 'Quero os templates grátis!'
Para: 'Fale com especialista'

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ Origem: {{ software_a }} -&gt; Destino: {{ software_b }}
                         </label>
                     </div>
                     
-                    <button type="submit" class="submit-btn">🚀 Quero os templates grátis!</button>
+                    <button type="submit" class="submit-btn">🚀 Fale com especialista</button>
                 </form>
                 
                 <div id="form-message" class="form-message"></div>
