🚀 Implementar estratégia AEO e otimização para LLMs
✅ PRIORIDADE ALTA - Concluído:

1. 🍳 Rebranding completo 'Automations Cookbook'
   - README atualizado com nome correto
   - Links para website oficial
   - Badges AEO/LLM Ready
   - Seção completa 'LLM & AEO Ready'

2. 🔗 Links reais para biblioteca
   - Botão 'Explorar Templates' → /integracoes/
   - Card 'Biblioteca de Templates' → /integracoes/
   - Atualização de 3.200 para 13.269 templates

3. 📄 Página /sobre (About)
   - AEO-optimized com Schema.org
   - Explicação completa do projeto
   - Seção dedicada para LLMs
   - Linguagem natural para queries
   - Cobertura de 87+ plataformas
   - Links para GitHub e biblioteca

4. 🤖 Página /llm (API para LLMs)
   - Endpoint LLM-friendly completo
   - Documentação do formato de dados
   - Casos de uso (RAG, chatbots, copilots)
   - Exemplos de queries naturais
   - Licença MIT e atribuição
   - Detalhes técnicos para integração

5. 🔧 Script improve_titles.py
   - Otimização automática de títulos
   - Linguagem natural conversacional
   - Descriptions SEO/AEO friendly
   - Pronto para processar 13.269 templates

Impacto:
- Melhora indexação em LLMs (ChatGPT, Claude, Gemini)
- Internal linking real (não apenas #views)
- Descoberta por crawlers melhorada
- Pronto para Answer Engine Optimization

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                         A ferramenta essencial para quem quer escalar operações sem perder tempo.
                     </p>
                     <div class="mt-10 flex justify-center gap-4">
-                        <button onclick="switchView('library')" class="px-8 py-3 rounded-lg bg-indigo-600 hover:bg-indigo-500 text-white font-bold shadow-lg shadow-indigo-500/30 transition-all transform hover:-translate-y-1">
+                        <a href="/integracoes/" class="px-8 py-3 rounded-lg bg-indigo-600 hover:bg-indigo-500 text-white font-bold shadow-lg shadow-indigo-500/30 transition-all transform hover:-translate-y-1">
                             Explorar Templates
-                        </button>
+                        </a>
                         <button onclick="switchView('generator')" class="px-8 py-3 rounded-lg bg-slate-800 hover:bg-slate-700 border border-slate-700 text-white font-medium transition-all">
                             Gerar Documentação
                         </button>
@@ -128,15 +128,15 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
                     <!-- Card 1: Templates -->
-                    <div onclick="switchView('library')" class="group cursor-pointer bg-white rounded-2xl shadow-sm hover:shadow-xl border border-slate-200 p-8 transition-all duration-300 hover:-translate-y-1 relative overflow-hidden">
+                    <a href="/integracoes/" class="group cursor-pointer bg-white rounded-2xl shadow-sm hover:shadow-xl border border-slate-200 p-8 transition-all duration-300 hover:-translate-y-1 relative overflow-hidden block">
                         <div class="absolute top-0 right-0 w-24 h-24 bg-blue-50 rounded-bl-full -mr-4 -mt-4 transition-transform group-hover:scale-110"></div>
                         <div class="w-12 h-12 bg-blue-100 rounded-xl flex items-center justify-center text-blue-600 mb-6 relative z-10">
                             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path></svg>
                         </div>
                         <h3 class="text-xl font-bold text-slate-900 mb-2">Biblioteca de Templates</h3>
-                        <p class="text-slate-600 text-sm leading-relaxed mb-4">Acesso a mais de <strong>3.200 fluxos prontos</strong>. Pesquise por caso de uso e baixe o JSON instantaneamente.</p>
+                        <p class="text-slate-600 text-sm leading-relaxed mb-4">Acesso a mais de <strong>13.269 fluxos prontos</strong>. Pesquise por caso de uso e baixe o JSON instantaneamente.</p>
                         <span class="text-blue-600 text-sm font-semibold flex items-center gap-1 group-hover:gap-2 transition-all">Acessar Biblioteca <span aria-hidden="true">→</span></span>
-                    </div>
+                    </a>
 
                     <!-- Card 2: Gerador -->
                     <div onclick="switchView('generator')" class="group cursor-pointer bg-white rounded-2xl shadow-sm hover:shadow-xl border border-slate-200 p-8 transition-all duration-300 hover:-translate-y-1 relative overflow-hidden">
