✨ Adicionar página Casos de Uso + Seção de Recursos no Home
🎯 Nova Página Criada:
- /casos-de-uso.html (724 linhas)
- 20+ casos de uso práticos organizados por 6 setores
- Schema.org CollectionPage markup

📊 Setores Cobertos:
1. Marketing & Growth (4 casos)
   - Leads Facebook Ads → CRM
   - Campanha Email Drip
   - Dashboard Performance Diário
   - Análise Sentimento com IA

2. Vendas & CRM (3 casos)
   - Follow-up Leads Frios
   - Distribuição Inteligente de Leads
   - Relatório Semanal Pipeline

3. E-commerce & Retail (4 casos)
   - Pedido Novo → Fluxo Completo
   - Alerta Estoque Baixo
   - Pedir Review Automático
   - Recuperar Carrinho Abandonado

4. Atendimento & Suporte (3 casos)
   - Email → Ticket Automático
   - Chatbot com IA (ChatGPT)
   - Feedback Pós-Atendimento

5. RH & People Ops (3 casos)
   - Onboarding Automático
   - Triagem Currículos com IA
   - Aniversários e Celebrações

6. TI & DevOps (3 casos)
   - Alerta Bug Crítico
   - Backup Automático Diário
   - Monitoramento Uptime

🎨 Design da Página:
- Cards interativos com hover effects
- Fluxo visual de cada automação
- Tags de ferramentas (Shopify, HubSpot, etc.)
- Indicadores de complexidade (Fácil/Médio/Avançado)
- Benefícios em bullet points
- CTA para biblioteca de templates
- Responsivo mobile-first

🏠 Melhorias no Index.html:
- Nova seção "Recursos de Aprendizado"
- 3 cards linkando para:
  * /guia-automacoes-n8n.html (Guia Completo)
  * /casos-de-uso.html (Casos de Uso)
  * /sobre.html (Sobre o Projeto)
- Design com gradient indigo-purple
- Hover effects em todos os cards

🗺️ Sitemap Atualizado:
- 13.276 URLs (antes: 13.275)
- Nova entrada: /casos-de-uso (priority 0.9)
- 2.9 MB total

Impacto AEO:
- Query: "exemplos automação n8n", "casos de uso n8n"
- 20+ long-tail keywords por setor
- Schema.org CollectionPage
- Internal linking melhorado

--- a/index.html
+++ b/index.html
@@ -194,6 +194,29 @@
                     </div>
 
                 </div>
+
+                <!-- Recursos Educacionais -->
+                <div class="mt-12 bg-gradient-to-r from-indigo-50 to-purple-50 rounded-2xl p-8 border border-indigo-100">
+                    <h3 class="text-2xl font-bold text-slate-900 mb-4">📚 Recursos de Aprendizado</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                        <a href="/guia-automacoes-n8n.html" class="bg-white rounded-xl p-6 hover:shadow-lg transition-all group">
+                            <div class="text-3xl mb-2">📘</div>
+                            <h4 class="font-bold text-slate-900 mb-2 group-hover:text-indigo-600">Guia Completo N8N</h4>
+                            <p class="text-sm text-slate-600">Do básico ao avançado. Instalação, conceitos, melhores práticas e muito mais.</p>
+                        </a>
+                        <a href="/casos-de-uso.html" class="bg-white rounded-xl p-6 hover:shadow-lg transition-all group">
+                            <div class="text-3xl mb-2">💼</div>
+                            <h4 class="font-bold text-slate-900 mb-2 group-hover:text-indigo-600">Casos de Uso</h4>
+                            <p class="text-sm text-slate-600">20+ exemplos práticos por setor: Marketing, Vendas, E-commerce, RH e TI.</p>
+                        </a>
+                        <a href="/sobre.html" class="bg-white rounded-xl p-6 hover:shadow-lg transition-all group">
+                            <div class="text-3xl mb-2">ℹ️</div>
+                            <h4 class="font-bold text-slate-900 mb-2 group-hover:text-indigo-600">Sobre o Projeto</h4>
+                            <p class="text-sm text-slate-600">Conheça o Automations Cookbook, nossa missão e como contribuir.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         
