📰 Adicionar Blog Tech Insights com artigo inaugural
✅ Blog completo implementado:
   • Home do blog (/blog) com cards e interface moderna
   • Artigo inaugural: 'O Grande Reset da Automação - Zapier 2025'
   • SEO profissional: Schema.org, Open Graph, Twitter Cards
   • Meta tags completas: title, description, keywords, author
   • Imagem otimizada com alt text descritivo

📊 Artigo destaque:
   • Título: O Grande Reset da Automação: Como a IA Quebrou a Hegemonia do Zapier em 2025
   • Subtítulo: n8n atinge valuation de US$ 2,5 bi, Workday adquire Pipedream
   • Autor: Felipe Lourenzo (AI Researcher & AI Automation Specialist)
   • Data: 09 de Dezembro de 2025
   • Leitura: 8 minutos
   • Tags: Zapier, n8n, Make, IA, Automação, iPaaS, Workday, Pipedream

🎨 Interface profissional:
   • Design moderno inspirado em blogs de tecnologia
   • Cards responsivos para artigos
   • Sistema de tags e categorias
   • Seção de newsletter
   • Artigos relacionados (placeholders)
   • Breadcrumbs e navegação

🔍 SEO avançado:
   • Schema.org Article markup completo
   • Open Graph para redes sociais
   • Twitter Cards
   • Canonical URLs
   • Image alt text descritivo (150+ caracteres)
   • Internal linking para templates
   • Botões de compartilhamento social

📝 Sobre o autor no rodapé:
   • Bio profissional de Felipe Lourenzo
   • Especialização em IA e Automação
   • Avatar com iniciais

🔗 Navegação:
   • Link 'Blog Tech Insights' no footer (após Guia n8n)
   • Presente em index.html e template_page.html
   • Não adicionado ao menu superior (conforme solicitado)

🗺️ Sitemap atualizado:
   • /blog
   • /blog/index.html
   • /blog/zapier-hegemonia-2025.html
   • Total: 13,449 URLs (+3)

Próximos artigos: Guia de Agentes IA, Benchmark Zapier vs n8n, ROI de Automação

--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@ Origem: {{ software_a }} -&gt; Destino: {{ software_b }}
                         <li><a href="#" onclick="switchView('academy')" class="hover:text-blue-600">Snippets de Código JavaScript</a></li>
                         <li><a href="#" onclick="switchView('toolbox')" class="hover:text-blue-600">Gerador de Expressões Cron</a></li>
                         <li><a href="#" onclick="switchView('integrations')" class="hover:text-blue-600">Guia de Integrações n8n</a></li>
+                        <li><a href="/blog" class="hover:text-blue-600">📰 Blog Tech Insights</a></li>
                     </ul>
                 </div>
                 <div>
