--- a/template_page.html
+++ b/template_page.html
@@ -228,6 +228,7 @@
             <div class="mt-4 flex justify-center gap-4 text-sm text-slate-400">
                 <a href="../index.html" class="hover:text-indigo-600">Home</a>
                 <a href="index.html" class="hover:text-indigo-600">Templates</a>
+                <a href="/blog" class="hover:text-indigo-600">Blog</a>
                 <a href="#" class="hover:text-indigo-600">Contato</a>
             </div>
         </div>
