feat(nav): adicionar botão Blog no menu superior
- Adicionado link 📝 Blog após o botão Doctor
- Link aponta para /blog (página principal do blog)
- Mantém mesmo estilo visual dos outros botões
- Adicionado em PT-BR e EN

--- a/translated/en/index.html
+++ b/translated/en/index.html
@@ -74,6 +74,7 @@
                     <button onclick="switchView('toolbox')" id="nav-toolbox" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🧰 Toolbox</button>
                     <button onclick="switchView('academy')" id="nav-academy" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🎓 Academy</button>
                     <button onclick="switchView('debugger')" id="nav-debugger" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap">🚑 Doctor</button>
+                    <a href="/blog" class="nav-btn px-3 py-1.5 rounded-md text-sm font-medium transition-all text-slate-600 hover:bg-white whitespace-nowrap inline-flex items-center">📝 Blog</a>
                     
                     <div class="w-px h-5 bg-slate-300 mx-1"></div>
                     
