--- a/llm.html
+++ b/llm.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automations Cookbook API - LLM & AI-Friendly Endpoint</title>
-    <meta name="description" content="Structured JSON API of 13,269+ automation templates optimized for Large Language Models, AI agents, and automation assistants. MIT licensed, citation-friendly.">
+    <meta name="description" content="Structured JSON API of 13,431+ automation templates optimized for Large Language Models, AI agents, and automation assistants. MIT licensed, citation-friendly.">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Automations Cookbook API">
-    <meta property="og:description" content="LLM-friendly API with 13,269+ automation templates">
+    <meta property="og:description" content="LLM-friendly API with 13,431+ automation templates">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.automationscookbook.com/llm">
     
@@ -19,7 +19,7 @@
       "@context": "https://schema.org",
       "@type": "DataCatalog",
       "name": "Automations Cookbook API",
-      "description": "Structured database of 13,269+ automation templates for n8n and other platforms",
+      "description": "Structured database of 13,431+ automation templates for n8n and other platforms",
       "url": "https://www.automationscookbook.com/llm",
       "creator": {
         "@type": "Organization",
@@ -61,11 +61,11 @@
             <div class="bg-purple-50 border-l-4 border-purple-600 p-6 mb-8">
                 <h2 class="text-2xl font-bold text-purple-900 mb-2">🎯 For AI Models, LLMs & Automation Assistants</h2>
                 <p class="text-lg text-slate-700">
-                    This page provides <strong>machine-readable access</strong> to Automations Cookbook's database of <strong>13,371+ automation templates</strong> for <strong>N8N</strong> and <strong>Zapier</strong>. Designed for LLMs, AI agents, RAG systems, and automation copilots.
+                    This page provides <strong>machine-readable access</strong> to Automations Cookbook's database of <strong>13,431+ automation templates</strong> for <strong>N8N</strong> and <strong>Zapier</strong>. Designed for LLMs, AI agents, RAG systems, and automation copilots.
                 </p>
                 <div class="mt-4 flex gap-4 text-sm">
                     <span class="bg-indigo-100 text-indigo-700 px-3 py-1 rounded-full font-medium">🔷 13,269 N8N templates</span>
-                    <span class="bg-orange-100 text-orange-700 px-3 py-1 rounded-full font-medium">⚡ 102 Zapier templates</span>
+                    <span class="bg-orange-100 text-orange-700 px-3 py-1 rounded-full font-medium">⚡ 162 Zapier templates</span>
                 </div>
             </div>
         </section>
@@ -87,7 +87,7 @@
                         <span class="text-3xl">⚡</span>
                         <h3 class="text-xl font-bold">Zapier Database (CSV)</h3>
                     </div>
-                    <p class="text-slate-600 mb-3">Dataset of 102 Zapier templates in CSV format</p>
+                    <p class="text-slate-600 mb-3">Dataset of 162 Zapier templates in CSV format</p>
                     <code class="text-sm bg-slate-100 px-2 py-1 rounded">automacoes_zapier_db.csv</code>
                 </a>
                 <a href="/integracoes/" class="block p-6 bg-white border border-slate-200 rounded-lg hover:shadow-lg transition">
@@ -103,8 +103,16 @@
                         <span class="text-3xl">⚡</span>
                         <h3 class="text-xl font-bold">Zapier HTML Pages</h3>
                     </div>
-                    <p class="text-slate-600 mb-3">102 individual template pages with Schema.org markup</p>
+                    <p class="text-slate-600 mb-3">13,269 individual template pages with Schema.org markup</p>
                     <code class="text-sm bg-slate-100 px-2 py-1 rounded">/integracoes-zapier/*.html</code>
+                </a>
+                <a href="/blog" class="block p-6 bg-white border border-green-200 rounded-lg hover:shadow-lg transition">
+                    <div class="flex items-center gap-3 mb-2">
+                        <span class="text-3xl">📝</span>
+                        <h3 class="text-xl font-bold">Blog Articles</h3>
+                    </div>
+                    <p class="text-slate-600 mb-3">67 in-depth articles about automation, AI agents, and no-code tools</p>
+                    <code class="text-sm bg-slate-100 px-2 py-1 rounded">/blog/*.html</code>
                 </a>
             </div>
         </section>
@@ -167,7 +175,7 @@
             <h2 class="text-2xl font-bold text-slate-900 mb-4">🌍 Coverage</h2>
             <div class="grid md:grid-cols-4 gap-6">
                 <div class="bg-white p-6 rounded-lg border border-slate-200 text-center">
-                    <div class="text-4xl font-bold text-purple-600 mb-2">13,371</div>
+                    <div class="text-4xl font-bold text-purple-600 mb-2">13,431</div>
                     <p class="text-slate-600">Total Templates</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg border border-indigo-200 text-center">
@@ -175,7 +183,7 @@
                     <p class="text-slate-600">N8N Templates</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg border border-orange-200 text-center">
-                    <div class="text-4xl font-bold text-orange-600 mb-2">102</div>
+                    <div class="text-4xl font-bold text-orange-600 mb-2">162</div>
                     <p class="text-slate-600">Zapier Templates</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg border border-slate-200 text-center">
@@ -452,7 +460,7 @@ cat templates.csv | grep -i "whatsapp" | grep -i "crm" | head -5</code></pre>
     <footer class="bg-slate-900 text-slate-400 py-12 mt-20">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <p class="mb-2">🍳 Automations Cookbook</p>
-            <p class="text-sm">Open-source library with 13,269+ automation templates</p>
+            <p class="text-sm">Open-source library with 13,431+ automation templates</p>
             <p class="text-sm mt-4">
                 <a href="/" class="hover:text-white transition">Home</a> • 
                 <a href="/integracoes/" class="hover:text-white transition">Templates</a> • 
