--- a/integracoes/facebook-ads-para-whatsapp-chatwoot-n8n.html
+++ b/integracoes/facebook-ads-para-whatsapp-chatwoot-n8n.html
@@ -53,20 +53,145 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "HowTo",
-      "name": "Como enviar automaticamente leads do Facebook Ads para o WhatsApp (Chatwoot)",
-      "description": "Aprenda a capturar leads do Facebook e iniciar conversas no WhatsApp via Chatwoot em tempo real. Ideal para equipes de marketing e vendas. Veja o passo a passo completo.",
-      "step": [
-        {"@type": "HowToStep", "text": "Conectar Trigger Facebook"},
-{"@type": "HowToStep", "text": "Formatar telefone (55+DDD)"},
-{"@type": "HowToStep", "text": "Buscar contato no Chatwoot"},
-{"@type": "HowToStep", "text": "Criar conversa na Inbox"},
-{"@type": "HowToStep", "text": "Enviar mensagem template"}
-      ],
-      "tool": [
-        { "@type": "HowToTool", "name": "n8n" },
-        { "@type": "HowToTool", "name": "Facebook Lead Ads" },
-        { "@type": "HowToTool", "name": "WhatsApp (Chatwoot)" }
+      "@graph": [
+        {
+          "@type": "HowTo",
+          "@id": "#howto",
+          "name": "Como enviar automaticamente leads do Facebook Ads para o WhatsApp (Chatwoot)",
+          "description": "Aprenda a capturar leads do Facebook e iniciar conversas no WhatsApp via Chatwoot em tempo real. Ideal para equipes de marketing e vendas. Veja o passo a passo completo.",
+          "image": "https://www.automationscookbook.com/assets/integrations/facebook-chatwoot.png",
+          "totalTime": "PT15M",
+          "estimatedCost": {
+            "@type": "MonetaryAmount",
+            "currency": "BRL",
+            "value": "0"
+          },
+          "tool": [
+            { "@type": "HowToTool", "name": "n8n (self-hosted ou cloud)" },
+            { "@type": "HowToTool", "name": "Conta Facebook Ads com API" },
+            { "@type": "HowToTool", "name": "Chatwoot com WhatsApp integrado" }
+          ],
+          "supply": [
+            { "@type": "HowToSupply", "name": "Token de API do Facebook" },
+            { "@type": "HowToSupply", "name": "API key do Chatwoot" },
+            { "@type": "HowToSupply", "name": "Número WhatsApp Business" }
+          ],
+          "step": [
+            {
+              "@type": "HowToStep",
+              "position": 1,
+              "name": "Conectar Trigger Facebook",
+              "text": "No n8n, adicione um node 'Facebook Lead Ads Trigger' e configure suas credenciais do Facebook. Selecione o formulário de leads que deseja monitorar.",
+              "url": "#step1"
+            },
+            {
+              "@type": "HowToStep",
+              "position": 2,
+              "name": "Formatar telefone (55+DDD)",
+              "text": "Use um node 'Function' para formatar o número de telefone recebido no padrão brasileiro (55 + DDD + número). Isso garante compatibilidade com WhatsApp.",
+              "url": "#step2"
+            },
+            {
+              "@type": "HowToStep",
+              "position": 3,
+              "name": "Buscar contato no Chatwoot",
+              "text": "Adicione um node 'HTTP Request' para buscar se o contato já existe no Chatwoot usando o número de telefone como identificador único.",
+              "url": "#step3"
+            },
+            {
+              "@type": "HowToStep",
+              "position": 4,
+              "name": "Criar conversa na Inbox",
+              "text": "Com o node 'Chatwoot', crie uma nova conversa na inbox do WhatsApp associada ao contato. Configure a mensagem inicial de boas-vindas.",
+              "url": "#step4"
+            },
+            {
+              "@type": "HowToStep",
+              "position": 5,
+              "name": "Enviar mensagem template",
+              "text": "Envie uma mensagem template aprovada do WhatsApp Business para iniciar o atendimento. Personalize com dados do lead capturado.",
+              "url": "#step5"
+            }
+          ]
+        },
+        {
+          "@type": "FAQPage",
+          "@id": "#faq",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "Quanto tempo leva para o lead aparecer no WhatsApp após preencher o formulário?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "A integração é em tempo real. Assim que o lead preenche o formulário do Facebook, o n8n captura os dados e envia para o Chatwoot em 2-5 segundos. O atendente recebe notificação imediata no WhatsApp."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Preciso ter WhatsApp Business API para usar esta automação?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sim, você precisa do WhatsApp Business API (não é o aplicativo comum). O Chatwoot se conecta à API oficial do WhatsApp. Você pode solicitar acesso através do Facebook Business Manager."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Quantos leads posso processar por dia com esta automação?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Com n8n self-hosted, não há limite técnico da ferramenta. O limite depende das quotas de API do Facebook (geralmente 200 chamadas/hora no plano básico) e do Chatwoot (ilimitado na versão self-hosted). Com Facebook Ads típico, consegue processar 1.000+ leads/dia sem problemas."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "O que acontece se o lead não tiver telefone no formulário?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Recomendamos adicionar um node 'IF' para verificar se o campo telefone existe. Se não existir, você pode enviar os dados para Google Sheets ou outro CRM, e notificar a equipe via Slack. Nunca deixe leads sem tratamento."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Posso personalizar a mensagem enviada no WhatsApp?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sim! No passo 5, você pode usar expressões do n8n como {{$json.nome}} para inserir dados dinâmicos do lead. Exemplo: 'Olá {{$json.nome}}, vi que você se interessou por {{$json.produto}}. Como posso ajudar?'"
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Esta automação funciona com outros países além do Brasil?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sim, funciona globalmente! No passo 2, ajuste o código de país (55 para Brasil, 1 para EUA, 44 para UK, etc.) de acordo com seu público-alvo. O resto do workflow permanece igual."
+              }
+            }
+          ]
+        },
+        {
+          "@type": "BreadcrumbList",
+          "@id": "#breadcrumb",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.automationscookbook.com"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Integrações N8N",
+              "item": "https://www.automationscookbook.com/integracoes/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Facebook Ads para WhatsApp Chatwoot",
+              "item": "https://www.automationscookbook.com/integracoes/facebook-ads-para-whatsapp-chatwoot-n8n.html"
+            }
+          ]
+        }
       ]
     }
     </script>
@@ -180,6 +305,77 @@
                             <li class="flex gap-2 items-start"><span class="text-indigo-500 font-bold">•</span> Conecte o <strong>Slack</strong> para receber um alerta sempre que este fluxo rodar.</li>
                             <li class="flex gap-2 items-start"><span class="text-indigo-500 font-bold">•</span> Use o node <strong>Crypto</strong> para anonimizar dados sensíveis.</li>
                         </ul>
+                    </div>
+
+                    <!-- FAQ Section -->
+                    <h2 id="faq" class="mt-12 mb-6">Perguntas Frequentes</h2>
+                    
+                    <div class="space-y-4">
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                Quanto tempo leva para o lead aparecer no WhatsApp após preencher o formulário?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                A integração é em tempo real. Assim que o lead preenche o formulário do Facebook, o n8n captura os dados e envia para o Chatwoot em 2-5 segundos. O atendente recebe notificação imediata no WhatsApp.
+                            </p>
+                        </details>
+
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                Preciso ter WhatsApp Business API para usar esta automação?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                Sim, você precisa do WhatsApp Business API (não é o aplicativo comum). O Chatwoot se conecta à API oficial do WhatsApp. Você pode solicitar acesso através do Facebook Business Manager.
+                            </p>
+                        </details>
+
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                Quantos leads posso processar por dia com esta automação?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                Com n8n self-hosted, não há limite técnico da ferramenta. O limite depende das quotas de API do Facebook (geralmente 200 chamadas/hora no plano básico) e do Chatwoot (ilimitado na versão self-hosted). Com Facebook Ads típico, consegue processar 1.000+ leads/dia sem problemas.
+                            </p>
+                        </details>
+
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                O que acontece se o lead não tiver telefone no formulário?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                Recomendamos adicionar um node 'IF' para verificar se o campo telefone existe. Se não existir, você pode enviar os dados para Google Sheets ou outro CRM, e notificar a equipe via Slack. Nunca deixe leads sem tratamento.
+                            </p>
+                        </details>
+
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                Posso personalizar a mensagem enviada no WhatsApp?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                Sim! No passo 5, você pode usar expressões do n8n como {{$json.nome}} para inserir dados dinâmicos do lead. Exemplo: 'Olá {{$json.nome}}, vi que você se interessou por {{$json.produto}}. Como posso ajudar?'
+                            </p>
+                        </details>
+
+                        <details class="bg-white border border-slate-200 rounded-lg p-4 hover:border-indigo-300 transition-colors">
+                            <summary class="font-bold text-slate-800 cursor-pointer hover:text-indigo-600">
+                                Esta automação funciona com outros países além do Brasil?
+                            </summary>
+                            <p class="mt-3 text-slate-600 text-sm">
+                                Sim, funciona globalmente! No passo 2, ajuste o código de país (55 para Brasil, 1 para EUA, 44 para UK, etc.) de acordo com seu público-alvo. O resto do workflow permanece igual.
+                            </p>
+                        </details>
+                    </div>
+
+                    <!-- LLM-Friendly Summary -->
+                    <div class="bg-blue-50 border-l-4 border-blue-500 p-6 my-8 rounded-r-lg">
+                        <h3 class="text-lg font-bold text-blue-900 mb-2">📝 Como Explicar para uma IA</h3>
+                        <p class="text-blue-800 text-sm leading-relaxed">
+                            Este workflow n8n automatiza a captura de leads do Facebook Ads e os envia instantaneamente para atendimento via WhatsApp no Chatwoot. 
+                            O fluxo: (1) Facebook Lead Ads Trigger detecta novo lead, (2) Function node formata telefone para padrão brasileiro, 
+                            (3) HTTP Request verifica se contato existe no Chatwoot, (4) Chatwoot node cria conversa na inbox do WhatsApp, 
+                            (5) Envia mensagem template aprovada do WhatsApp Business. Ideal para equipes de vendas que precisam resposta rápida a leads qualificados. 
+                            Requer: n8n, Facebook Ads com API, Chatwoot com WhatsApp Business API integrado.
+                        </p>
                     </div>
 
                 </article>
